# pre-commit-hooks

./: .gitmodules  .pre-commit-hooks.yaml  README.md  nbstripout  nbstripout.sh  secret_check.py  setup.cfg
pre_commit_hooks/: check_notebook_has_parameters_cell.py  nbsmoke_lint.py  secret_check.py  validate_duplicate_dag_ids.py  validate_encrypted_secret_name.py  validate_secrets_are_encrypted.py
