[metadata]
name = pre_commit_hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viaduct-ai/pre-commit-hooks
author = Mitchell Sayer
author_email = mitchell@viaduct.ai

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    flake8
    pyyaml
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    secret_check = pre_commit_hooks.secret_check:main