[metadata]
name = pre_commit_hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viaduct-ai/pre-commit-hooks
author = Viaduct.ai
author_email = engineering@viaduct.ai

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    flake8
    nbsmoke
    pyyaml
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    validate_secrets_are_encrypted = pre_commit_hooks.validate_secrets_are_encrypted:main
    validate_encrypted_secret_name = pre_commit_hooks.validate_encrypted_secret_name:main
    check_notebook_has_parameters_cell = pre_commit_hooks.check_notebook_has_parameters_cell:main
    nbsmoke_lint = pre_commit_hooks.nbsmoke_lint:main
